colors fixed to be more readabe

--- a/media/consoleWebView/main.css
+++ b/media/consoleWebView/main.css
@@ -24,7 +24,7 @@ body {
 }
 
 .debug-log {
-	color: purple;
+	color: 	#BF40BF;
 }
 
 .debug-warning {
